--- a/jupyter_notebooks/data_transformation.ipynb
+++ b/jupyter_notebooks/data_transformation.ipynb
@@ -16,7 +16,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n"
    ]
   },
   {
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "031a2f1d",
    "metadata": {},
    "outputs": [
@@ -65,69 +65,69 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>112</th>\n",
-       "      <td>37</td>\n",
-       "      <td>male</td>\n",
-       "      <td>30.80</td>\n",
+       "      <th>227</th>\n",
+       "      <td>58</td>\n",
+       "      <td>female</td>\n",
+       "      <td>41.910</td>\n",
        "      <td>0</td>\n",
-       "      <td>no</td>\n",
-       "      <td>southwest</td>\n",
-       "      <td>4646.7590</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>461</th>\n",
-       "      <td>42</td>\n",
-       "      <td>male</td>\n",
-       "      <td>30.00</td>\n",
-       "      <td>0</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>southwest</td>\n",
-       "      <td>22144.0320</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>669</th>\n",
-       "      <td>30</td>\n",
-       "      <td>male</td>\n",
-       "      <td>31.57</td>\n",
-       "      <td>3</td>\n",
        "      <td>no</td>\n",
        "      <td>southeast</td>\n",
-       "      <td>4837.5823</td>\n",
+       "      <td>24227.33724</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>497</th>\n",
-       "      <td>45</td>\n",
+       "      <th>1326</th>\n",
+       "      <td>51</td>\n",
        "      <td>male</td>\n",
-       "      <td>28.70</td>\n",
-       "      <td>2</td>\n",
+       "      <td>30.030</td>\n",
+       "      <td>1</td>\n",
        "      <td>no</td>\n",
-       "      <td>southwest</td>\n",
-       "      <td>8027.9680</td>\n",
+       "      <td>southeast</td>\n",
+       "      <td>9377.90470</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1167</th>\n",
-       "      <td>32</td>\n",
+       "      <th>1022</th>\n",
+       "      <td>18</td>\n",
        "      <td>male</td>\n",
-       "      <td>35.20</td>\n",
+       "      <td>23.320</td>\n",
+       "      <td>1</td>\n",
+       "      <td>no</td>\n",
+       "      <td>southeast</td>\n",
+       "      <td>1711.02680</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1210</th>\n",
+       "      <td>39</td>\n",
+       "      <td>male</td>\n",
+       "      <td>34.100</td>\n",
        "      <td>2</td>\n",
        "      <td>no</td>\n",
-       "      <td>southwest</td>\n",
-       "      <td>4670.6400</td>\n",
+       "      <td>southeast</td>\n",
+       "      <td>23563.01618</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>367</th>\n",
+       "      <td>42</td>\n",
+       "      <td>female</td>\n",
+       "      <td>24.985</td>\n",
+       "      <td>2</td>\n",
+       "      <td>no</td>\n",
+       "      <td>northwest</td>\n",
+       "      <td>8017.06115</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      age   sex    bmi  children smoker     region     charges\n",
-       "112    37  male  30.80         0     no  southwest   4646.7590\n",
-       "461    42  male  30.00         0    yes  southwest  22144.0320\n",
-       "669    30  male  31.57         3     no  southeast   4837.5823\n",
-       "497    45  male  28.70         2     no  southwest   8027.9680\n",
-       "1167   32  male  35.20         2     no  southwest   4670.6400"
+       "      age     sex     bmi  children smoker     region      charges\n",
+       "227    58  female  41.910         0     no  southeast  24227.33724\n",
+       "1326   51    male  30.030         1     no  southeast   9377.90470\n",
+       "1022   18    male  23.320         1     no  southeast   1711.02680\n",
+       "1210   39    male  34.100         2     no  southeast  23563.01618\n",
+       "367    42  female  24.985         2     no  northwest   8017.06115"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "f82f3cc3",
    "metadata": {},
    "outputs": [
@@ -156,7 +156,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "b8e0cd16",
    "metadata": {},
    "outputs": [
@@ -205,7 +205,7 @@
        "Index(['age', 'sex', 'bmi', 'children', 'smoker', 'region', 'charges'], dtype='object')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "id": "27fd7b1d",
    "metadata": {},
    "outputs": [],
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "id": "7701f7e3",
    "metadata": {},
    "outputs": [],
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "id": "23370da6",
    "metadata": {},
    "outputs": [],
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "id": "451b430b",
    "metadata": {},
    "outputs": [],
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "id": "5a22a0dc",
    "metadata": {},
    "outputs": [
@@ -339,7 +339,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
    "id": "6cf981f5",
    "metadata": {},
    "outputs": [
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
    "id": "751026a1",
    "metadata": {},
    "outputs": [
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 13,
    "id": "2b81b4d9",
    "metadata": {},
    "outputs": [],
