updated markdown and boxplot included

--- a/jupyter_notebooks/data investigation.ipynb
+++ b/jupyter_notebooks/data investigation.ipynb
@@ -20,6 +20,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ddc80e16",
+   "metadata": {},
+   "source": [
+    "Import the data to start "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "780198b8",
@@ -203,7 +211,7 @@
    "id": "323c0c4b",
    "metadata": {},
    "source": [
-    "Imported the raw data - insurance csv file (above) Using Numpy and Pandas to clean the data. "
+    "Imported the raw data - insurance csv file (above) Using Numpy and Pandas to clean the data. Checking for missing values and duplicate records "
    ]
   },
   {
@@ -252,6 +260,14 @@
    ],
    "source": [
     "df.duplicated().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "12822ded",
+   "metadata": {},
+   "source": [
+    "One duplicate record is removed. "
    ]
   },
   {
@@ -435,7 +451,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "checked for missing values and duplicates in the data set. Duplicates are removed and file saved ready for transformation "
+    "Updated file saved ready for transformation "
    ]
   },
   {
