--- a/jupyter_notebooks/data_transformation.ipynb
+++ b/jupyter_notebooks/data_transformation.ipynb
@@ -166,6 +166,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2f39e61f",
+   "metadata": {},
+   "source": [
+    "Checking the data types in the data to ensure the data can be analysed. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 20,
    "id": "72d4e73b",
@@ -191,6 +199,14 @@
    ],
    "source": [
     "df.dtypes\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b2394e34",
+   "metadata": {},
+   "source": [
+    "The Smoker and Region columns are of type object, which  indicates categorical data in pandas. These need to be encoded (e.g., using label encoding or one-hot encoding) to convert them into a numerical format suitable for analysis and machine learning models."
    ]
   },
   {
